--- a/notes/index.html
+++ b/notes/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,12 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <title>Thesis Lisa | Home</title>
+    <title>Thesis Lisa | Abstract</title>
 
     <link href="https://kabk.github.io/go-theses-22-lisa-dieterle/assets/css/prism.css" rel="stylesheet">
 <link href="https://kabk.github.io/go-theses-22-lisa-dieterle/assets/css/lightbox.css" rel="stylesheet">
 <link href="https://kabk.github.io/go-theses-22-lisa-dieterle/assets/css/index.css" rel="stylesheet">
-<link href="https://kabk.github.io/go-theses-22-lisa-dieterle/assets/css/templates/home.css" rel="stylesheet">
+
     <link rel="shortcut icon" type="image/x-icon" href="https://kabk.github.io/go-theses-22-lisa-dieterle/favicon.ico">
 </head>
 <body>
@@ -21,7 +20,7 @@
       Thesis Lisa    </a>
 
     <nav class="menu">
-                  <a  href="https://kabk.github.io/go-theses-22-lisa-dieterle/notes">Abstract</a>
+                  <a aria-current  href="https://kabk.github.io/go-theses-22-lisa-dieterle/notes">Abstract</a>
             <a  href="https://kabk.github.io/go-theses-22-lisa-dieterle/Chapter01">Haptic Memory</a>
             <a  href="https://kabk.github.io/go-theses-22-lisa-dieterle/Chapter02">Re-Visioning</a>
             <a  href="https://kabk.github.io/go-theses-22-lisa-dieterle/Chapter03">Prediciting New Types</a>
@@ -29,8 +28,18 @@
   </header>
 
   <main class="main">
+
   <header class="h1">
-  <h1>Reviving Archives</h1>
-    <p class="color-grey">&mdash; Concept of archiving in the &#039;digital space&#039;</p>
+  <h1>Abstract</h1>
   </header>
-    
+
+<ul class="grid">
+  </ul>
+
+<article class="note">
+  <header class="note-header h1">
+      </header>
+  
+  <div class="note text">
+      </div>
+</article>
