--- a/introduction/index.html
+++ b/introduction/index.html
@@ -8,17 +8,9 @@
 
   <title> | introduction</title>
   <meta name="description" content="">
-  <link rel="icon" type="image/x-icon" href="/content/" />
+  <link rel="icon" type="image/x-icon" href="/go-theses-22-lisa-dieterle/content/" />
 
-  <link href="/assets/css/main.css" rel="stylesheet">  <link href="/assets/css/index.css" rel="stylesheet">  <link href="/assets/css/custom.css" rel="stylesheet">  <link href="/assets/css/bigfoot-default.css" rel="stylesheet">  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-
-  <script type="text/javascript">
-    var bigfoot = $.bigfoot({
-      deleteOnUnhover: false,
-      preventPageScroll: false,
-      hoverDelay: 250
-    });
-  </script>
+  <link href="/go-theses-22-lisa-dieterle/assets/css/main.css" rel="stylesheet">  <link href="/go-theses-22-lisa-dieterle/assets/css/index.css" rel="stylesheet">  <link href="/go-theses-22-lisa-dieterle/assets/css/custom.css" rel="stylesheet">  <link href="/go-theses-22-lisa-dieterle/assets/css/bigfoot-default.css" rel="stylesheet">
 
 
 
