--- a/introduction/index.html
+++ b/introduction/index.html
@@ -8,7 +8,7 @@
 
   <title> | introduction</title>
   <meta name="description" content="">
-  <link rel="icon" type="image/x-icon" href="/go-theses-22-lisa-dieterle/content/" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
   <link href="/go-theses-22-lisa-dieterle/assets/css/main.css" rel="stylesheet">  <link href="/go-theses-22-lisa-dieterle/assets/css/index.css" rel="stylesheet">  <link href="/go-theses-22-lisa-dieterle/assets/css/bigfoot-default.css" rel="stylesheet">  
 </head>
